Revision history for Dist-Zilla-PluginBundle-Author-ETHER

{{$NEXT}}

0.116     2016-06-12 01:07:29Z
          - bump prereq version for [Test::Portability] for the new xt/author
            placement
          - removed [AuthorityFromModule], as recent PAUSE improvements have
            rendered it redundant

0.115     2016-05-28 20:33:51Z
          - [Test::PodSpelling] now also tests files in examples/, lib/,
            script/, t/, xt/ directories
          - bump prereq version for [Test::Pod::No404s] for the new xt/author
            placement (RT#114799)
          - fix tests that fail with Dist::Zilla::Plugin::NextRelease 6.005

0.114     2016-04-27 04:26:51Z
          - fix PodWeaver config test that broke when Dist::Zilla::Tester
            behaviour changed

0.113     2016-04-23 16:11:17Z
          - remove last vestiges of Path::Class

0.112     2016-03-14 02:35:38Z
          - adjust minting template so vim modeline is always high enough to
            be respected (first five lines)
          - use new version_extractor = Module::Metadata feature in
            [Test::ReportPrereqs]

0.111     2016-02-10 04:50:57Z
          - use more sophisticated markup for the irc channel in SUPPORT pod
          - avoid mangling pod sections labelled something like "SUPPORTED
            INTERFACES" into the "SUPPORT" section

0.110     2015-12-23 07:57:17Z
          - run [Git::Contributors] later, after other prereq plugins have run

0.109     2015-12-02 02:59:09Z
          - avoid importing Test::Deep::none in tests, to avoid clashing with
            List::Util
          - strip ANSI colours when testing release output

0.108     2015-11-12 04:55:28Z
          - drop dots after URLs in CONTRIBUTING, which broke hyperlinking
          - switch from [GenerateFile::ShareDir] to
            [GenerateFile::FromShareDir]

0.107     2015-10-14 01:29:39Z
          - bump prereq version for [PodSyntaxTests], [PodCoverageTests] for